Added styling and fix bug on clicking after winning

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
         <div class="message">Player X's turn</div>
         <div class="board"></div>
         <div class="controls">
-            <button class="previous" style="display: none;">Previous</button>
-            <button class="next" style="display: none;">Next</button>
-            <button class="reset">Reset</button>
+            <button class="button previous" style="display: none;">Previous</button>
+            <button class="button next" style="display: none;">Next</button>
+            <button class="button reset">Reset</button>
         </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
